--- a/style2.css
+++ b/style2.css
@@ -28,11 +28,11 @@
   }
   
   .bar li a:hover {
-    background-color: #bb00ff;
+    background-color: rgb(48, 47, 48);
   }
   
   .bar li a.active {
-    background-color: #bb00ff;
+    background-color: rgb(48, 47, 48);
     color: white;
   }
   
