--- a/style2.css
+++ b/style2.css
@@ -52,7 +52,7 @@ body {
 body {
     font-family: Arial, sans-serif;
      
-    color: #000000;
+    color: white;
 }
 
 header {
@@ -179,11 +179,78 @@ footer {
     margin-bottom: 10px;
     color: #000000;
 }
-/*#logo_neon {
-    position: fixed;
-    top: 0; 
-    left: 0; 
-    z-index: 9999; 
-    width: 150px; 
-    height: auto; 
-}*/
+
+/* Start of Survey */
+
+* {
+    box-sizing: border-box;
+  }
+  
+  body {
+    margin: 30px;
+    position:fixed; left:0px; bottom:400px;
+    background-color: white
+  }
+  
+  form {
+    max-width: 400px;
+  }
+  
+  form > div {
+    margin-bottom: 20px;
+  }
+  
+  .question {
+      margin-top: 10px;
+      padding: 5px;
+      text-align: center;
+      border: 1px solid #c5c5c5;
+      border-color: black;
+      border-radius: 5px;
+      background-color: purple;
+      font-weight: bold;
+      display: block;
+      margin-bottom: 5px;
+      color: black;
+      position: relative;
+      left:850px;
+  }
+  
+  .radio-group, select, textarea {
+    margin-left: 15px;
+    width: 400px;
+    position: relative;
+    left:870px;
+  }
+  
+  textarea {
+    padding: 10px;
+  }
+  
+  .radio-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 3px;
+  }
+  
+  .radio-item label {
+    margin-left: 5px;
+  }
+  
+  .radio-item input {
+    margin: 0;
+  }
+  
+  .submit-btn {
+      padding: 10px;
+      font-size: 20px;
+      background-color: white;
+      color: black;
+      border: none;
+      cursor: pointer;
+      box-shadow: 0 0 0 rgb(48, 47, 48);
+      transition: box-shadow 300ms, color 300ms;
+      position: fixed;
+      left:881px;
+      bottom:400px;
+  }
